--- a/trunk/cfdesign.tex
+++ b/trunk/cfdesign.tex
@@ -22,11 +22,10 @@ There are (as of now) eight blocks in Desktop Scratch that are related to mouse 
 \subsection{Function Blocks}
 The five mouse-related function blocks in Desktop Scratch are labeled ``touching mouse-pointer?", ``mouse down?", ``distance to mouse-pointer," ``mouse x," and ``mouse y." Following their namesakes, the ``touching mouse-pointer?" and ``mouse down?" blocks both produce Boolean values (e.g., \emph{true} or \emph{false}) corresponding to the current answer to their respective questions, while the ``distance to mouse-pointer," ``mouse x," and ``mouse y" blocks produce integer values (e.g., \emph{10}, \emph{-33}, \emph{147}, etc.) that similarly reflect their respective values. 
 
-The first two equivalent Closest Finger Design function blocks, which I have labeled ``touching finger?" and ``finger pressed?", are relatively straightforward
-\footnote{Note that these blocks reference ``fingers," but, in reality, most tablets cannot actually tell the difference between a touch coming from a finger or a touch coming from any other body part. However, for the sake of concreteness (and to avoid the potential confusion of a ``touch down" block), I have decided for blocks in the Closest Finger Design to refer to ``fingers" instead of ``touches."}.
+The first two equivalent Closest Finger Design function blocks, which I have labeled ``touching finger?" and ``finger pressed?", are relatively straightforward.\footnote{Note that these blocks reference ``fingers," but, in reality, most tablets cannot actually tell the difference between a touch coming from a finger or a touch coming from any other body part. However, for the sake of concreteness (and to avoid the potential confusion of a ``touch down" block), I have decided for blocks in the Closest Finger Design to refer to ``fingers" instead of ``touches."}
 As the name suggests, the ``touching finger?" block takes on a value of \emph{true} when a finger pressed on the tablet is touching the sprite using the block and a value of \emph{false} otherwise. Similarly, the ``finger pressed?" block takes on a value of \emph{true} when at least one finger is pressed on the stage and a value of \emph{false} when there are no touches.
 
-The remaining three function blocks, labeled ``distance to finger," ``finger x," and ``finger y," are a little more difficult to articulate. In general, the ``distance to finger" block evaluates the distance from the sprite to the touch that is currently closest to the sprite (i.e., the touch that has the shortest two-dimensional distance to the center of the sprite with ties broken arbitrarily), while the ``finger x" and ``finger y" blocks represent the values of the latest x and y coordinates of that touch. When no fingers are currently being pressed on the tablet, ``finger x" and ``finger y" will take the values corresponding to the location of the last touch to have been made during the execution of the project. If the project just recently began and touches have yet to be made, ``finger x" and ``finger y" must take on an arbitrary value. Since there is no ``null value" in Scratch and error messages are generally avoided, I have chosen for both ``finger x" and ``finger y" to evaluate to $0$ when there are no prior touches. The ``distance to finger" block will always take the value of the distance between the current location of the sprite and the location with the coordinate values of ``finger x" and ``finger y."
+The remaining three function blocks, labeled ``distance to finger," ``finger x," and ``finger y," are a little more difficult to articulate. In general, the ``distance to finger" block evaluates the distance from the sprite to the touch that is currently closest to the sprite (i.e., the touch that has the shortest two-dimensional distance to the center of the sprite), while the ``finger x" and ``finger y" blocks represent the values of the latest x and y coordinates of that touch. When no fingers are currently being pressed on the tablet, ``finger x" and ``finger y" will take the values corresponding to the location of the last touch to have been made during the execution of the project. If the project just recently began and touches have yet to be made, ``finger x" and ``finger y" must take on an arbitrary value. Since there is no ``null value" in Scratch and error messages are generally avoided, I have chosen for both ``finger x" and ``finger y" to evaluate to $0$ when there are no prior touches. The ``distance to finger" block will always take the value of the distance between the current location of the sprite and the location with the coordinate values of ``finger x" and ``finger y."
 
 \subsection{Command Blocks}
 The two mouse-related command blocks in Desktop Scratch are the ``point towards mouse-pointer" and ``go to mouse-pointer" blocks; both of these, when executed, cause sprites to act as their names imply. Their equivalent Closest Finger Design blocks are similarly named ``point towards finger" and ``go to finger." Both of these blocks behave in a similar manner to their mouse counterparts, but focus on the location of the closest touch as opposed to that of the mouse.  
@@ -40,7 +39,7 @@ Finally, the sole trigger block in Desktop Scratch's mouse interaction set is th
 
 The equivalent trigger block for the Closest Finger Design is the ``when this sprite is tapped" block, which is triggered whenever a sprite is tapped. A sprite is said to be ``tapped" whenever a finger is pressed down on the sprite and quickly lifted. The ``when this sprite is tapped" block handles repeat triggerings in the same way as its mouse counterpart, i.e., by restarting the execution of the connected stack. Note that this trigger block can be triggered by any touch, not just the closest touch, although in practice the triggering touch will almost always be the closest touch.
 
-Since a variety of single-touch gestures, including swiping, long taps, and double taps, are commonplace in tablet applications, it may be beneficial to augment the ``when this sprite is tapped" block to support other common gestures (Figure \ref{When_This_Sprite_Is_Tapped}). Adding support for more common single-touch gestures lowers the floors to implementing those interactions. However, this added support comes at the potential cost of narrowing the walls, since Scratchers might be encouraged to use the supported gestures instead of creating their own. Nevertheless, the interaction set is not fundamentally changed by adding support for other common single-touch gestures, so I will not be discussing at length which specific gestures are best to include.
+Since a variety of single-touch gestures, including swiping, long taps, and double taps, are commonplace in tablet applications, it may be beneficial to augment the ``when this sprite is tapped" block to support other common gestures (Figure \ref{When_This_Sprite_Is_Tapped}). Additional support for common single-touch gestures lowers the floors to implementing those interactions, thus allowing beginning Scratchers to easily create a wide range of interactive projects. Nevertheless, the interaction set is not fundamentally changed by adding support for other common single-touch gestures, so I will not be discussing at length which specific gestures are best to include.
 
 \begin{figure}
 \centering
