--- a/trunk/cover.tex
+++ b/trunk/cover.tex
@@ -31,12 +31,12 @@
 
 % If there is more than one supervisor, use the \supervisor command
 % once for each.
-\supervisor{Mitchel Resnick}{LEGO Papert Professor of Learning Research, MIT Media Lab}
+\supervisor{Prof. Mitchel Resnick}{LEGO Papert Professor of Learning Research, MIT Media Lab}
 
 % This is the department committee chairman, not the thesis committee
 % chairman.  You should replace this with your Department's Committee
 % Chairman.
-\chairman{Prof. Dennis M. Freeman}{Chairman, Masters of Engineering Thesis Committee}
+\chairman{Prof. Albert R. Meyer}{Chairman, Masters of Engineering Thesis Committee}
 
 % Make the titlepage based on the above information.  If you need
 % something special and can't use the standard form, you can specify
@@ -66,7 +66,6 @@
 \setcounter{savepage}{\thepage}
 \begin{abstractpage}
 \input{abstract}
-Here is where my abstract would go... IF I HAD ONE!!!
 \end{abstractpage}
 
 % Additional copy: start a new page, and reset the page number.  This way,
