--- a/trunk/intro.tex
+++ b/trunk/intro.tex
@@ -26,6 +26,6 @@ While it is tempting to think that the mouse blocks in Scratch can be directly t
 The currently standard systems of coding multi-touch interactivity are far too unintuitive and complex for the purposes of Scratch. Although there have been several attempts to simplify implementing multi-touch interactivity, none so far have been successful in simultaneously keeping the floor low enough and ceiling high enough for Scratch's standards. Therefore, it is necessary, and also the premise of this thesis, to design and evaluate a variety of archetypal approaches to creating the multi-touch interaction set for the forthcoming tablet version of Scratch.
 
 \section{Thesis Overview}
-In this thesis I will describe several potential designs for Tablet Scratch's multi-touch interaction set and analyze their respective merits and faults. In Chapter 2, I will analyze previous work in the field of programming multi-touch interactions, provide background on the Scratch programming language, and specify the goals for Tablet Scratch's multi-touch interaction set. In Chapter 3, I will describe an assortment of case projects with which I will evaluate the interaction set designs. Next, in Chapters 4, 5, and 6, I will describe three multi-touch interaction set designs and analyze them based on Scratch's design principles. Finally, in Chapter 7, I will present conclusions and outline future work possibilities.
+In this thesis, I will describe several potential designs for Tablet Scratch's multi-touch interaction set and analyze their respective merits and faults. In Chapter 2, I will analyze previous work in the field of programming multi-touch interactions, provide background on the Scratch programming language, and specify the goals for Tablet Scratch's multi-touch interaction set. In Chapter 3, I will describe an assortment of case projects with which I will evaluate the interaction set designs. Next, in Chapters 4, 5, and 6, I will describe three multi-touch interaction set designs and analyze them based on Scratch's design principles. Finally, in Chapter 7, I will present conclusions and outline future work possibilities.
 
 
