--- a/trunk/main.tex
+++ b/trunk/main.tex
@@ -29,6 +29,8 @@
 \usepackage{lgrind}
 \usepackage{graphicx}
 \pagestyle{plain}
+\widowpenalty10000
+\clubpenalty10000
 
 %% This bit allows you to either specify only the files which you wish to
 %% process, or `all' to process all files which you \include.
