--- a/trunk/ridesign.tex
+++ b/trunk/ridesign.tex
@@ -1,7 +1,7 @@
 \chapter{Relative Indexing Design}
 While the Closest Finger Design does greatly simplify the task of handling up to ten simultaneous touches, it does so by avoidance. By restricting each sprite to only being able to listen to one touch at a time, the Closest Finger Design eludes having to handle ten touches within the same script. Even though this approach is reasonable, there are other potential strategies for simplification without such a restriction.
 
-For example, one natural way to think about handling the up to ten simultaneous touches is to think of them as ten persistent touch-objects, among which all touch inputs are distributed. Since there can be at most ten simultaneous touch inputs, ten touch-objects are enough to handle all touch inputs made throughout the execution of any project. The big question with such a design becomes: What is the best way to distribute the touch inputs amongst the ten touch-objects?
+For example, one natural way to think about handling the up to ten simultaneous touches is to think of them as ten persistent touch-objects, among which all touch inputs are distributed. Since there can be at most ten simultaneous touch inputs, ten touch-objects are enough to handle all touch inputs made throughout the execution of any project. Each of these touch objects will be used to store the input values of the touch it is currently associated with, i.e. the x and y coordinates of the touch and whether the touch is being pressed on the tablet. The big question with such a design becomes: What is the best way to distribute the touch inputs amongst the ten touch-objects?
 
 In this second multi-touch interaction set design, which I have named the \emph{Relative Indexing Design}, the persistent touch-objects are indexed $1$ through $10$ and represent the status of the touch inputs with matching indices. The touch inputs are indexed relative to the other concurrent touches in order of initiation from $1$ to the number of current touches. Since touches are (as the design's name implies) indexed relatively, a touch's associated index (and, thus, associated persistent touch-object) can  be subject to change. For example, a touch that was the third-oldest current touch (meaning it has an associated index of 3) can become the oldest current touch (meaning an associated index of 1) if the two older current touches are lifted. While this manner of indexing is intuitive, it has a few quirks that can lead to many unforeseen bugs in the development of seemingly simple projects.
 
@@ -18,7 +18,7 @@ The Relative Indexing Design consists of nine touch blocks, only one of which is
 \label{Number_Of_Fingers}
 \end{figure}
 
-The remaining eight touch blocks in the Relative Indexing Design are the same in appearance as the unextended Closest Finger Design interaction set, with the exception that each of the Relative Indexing Design blocks has an added numerical parameter (see left side of Figure \ref{Relative_Indexing_Design_Block_Set}). This parameter is used to select the index (ranging from 1 to 10) of the desired touch of interest.\footnote{Note that in these blocks I again use the term ``finger" instead of touch. Although this terminology could lead some novices into thinking that the touch indices correspond to particular fingers (e.g., finger 5 always refers to the user's left thumb), I believe it is still beneficial to use the concrete term ``finger," rather than the abstract term ``touch."}
+The remaining eight touch blocks in the Relative Indexing Design are similar in appearance to the extended Closest Finger Design interaction set minus the ``when this sprite is tapped" block. The only difference is that each of the Relative Indexing Design blocks has an added numerical parameter (see left side of Figure \ref{Relative_Indexing_Design_Block_Set}). This parameter is used to select the index (ranging from 1 to 10) of the desired touch of interest.\footnote{Note that in these blocks I again use the term ``finger" instead of touch. Although this terminology could lead some novices into thinking that the touch indices correspond to particular fingers (e.g., finger 5 always refers to the user's left thumb), I believe it is still beneficial to use the concrete term ``finger," rather than the abstract term ``touch."}
 The parameter is a drop-down menu with values ranging from 1 to 10, but it is also a slot that can be filled with a function block (see right side of Figure \ref{Relative_Indexing_Design_Block_Set}). If the inserted function block returns a value other than an integer between 1 and 10, the value gets defaulted to 1, so as to avoid throwing errors.
 
 \begin{figure}
@@ -32,7 +32,7 @@ The parameter is a drop-down menu with values ranging from 1 to 10, but it is al
 Of these eight remaining touch blocks, only two, the ``finger (\emph{index}) down?" and ``when finger (\emph{index}) pressed" blocks, are not affected by the location of the touch inputs, so I will quickly explain them first. The ``finger (\emph{index}) down?" block is a simple Boolean function block that returns a value of \emph{true} if the touch with the index of (\emph{index}) is currently down and a value of \emph{false} otherwise. By the nature of relative indexing, this is the equivalent of determining whether
 there are at least (\emph{index}) touches currently pressed on the tablet. As a result, the ``finger (\emph{index}) down?" block is redundant, since this value can be determined using the ``number of fingers" block along with some logic blocks. Even so, the ``finger (\emph{index}) down?" block is a worthwhile shortcut, because it can become tedious to determine the value repeatedly.
 
-The ``when finger (\emph{index}) pressed" block is a simple trigger block that is closely related to the ``finger (\emph{index}) down?" function block. The ``when finger (\emph{index}) pressed" block is triggered at the moment the finger with the index of (\emph{index}) is pressed. In other words, the ``when finger (\emph{index}) pressed" block executes its connected stack at the moment the number of touches on the tablet increases from (\emph{index-1}) to (\emph{index}). Like its Closest Finger Design analogue, the ``when finger (\emph{index}) pressed" block restarts the execution of its connected stack when it is triggered for a second time before finishing the first execution.
+The ``when finger (\emph{index}) pressed" block is a simple trigger block that is closely related to the ``finger (\emph{index}) down?" function block. The ``when finger (\emph{index}) pressed" block is triggered at the moment the finger with the index of (\emph{index}) is pressed. In other words, the ``when finger (\emph{index}) pressed" block executes its connected stack at the moment the number of touches on the tablet increases from (\emph{index-1}) to (\emph{index}). Unlike its extended Closest Finger Design counterpart, which creates new threads for every triggering, the ``when finger (\emph{index}) pressed" block restarts the execution of its connected stack when it is triggered for a second time before finishing the first execution.
 
 The final six blocks, ``touching finger (\emph{index})?", ``distance to finger (\emph{index})," ``point towards finger (\emph{index})," ``go to finger (\emph{index})," ``finger (\emph{index}) x," and ``finger (\emph{index}) y," behave the same as their Closest Finger Design counterparts except that their location of interest is the current location of the touch with the index of (\emph{index}) instead of the sprite's closest touch. When (\emph{index}) is less than or equal to the current number of touches (i.e., the ``finger (\emph{index}) down?" block evaluates to \emph{true}), the location touch with the index of (\emph{index}) is simply the location of the (\emph{index})th-longest-lasting touch currently on the tablet. Otherwise, when (\emph{index}) is greater than the current number of touches (i.e., the ``finger (\emph{index}) down?" block evaluates to \emph{false}), the location of the touch with the index of (\emph{index}) remains at its last location. Again, prior to all touches, the fingers of all indices have the arbitrary, default  location of $\{0,0\}$.
 
@@ -41,7 +41,7 @@ The final six blocks, ``touching finger (\emph{index})?", ``distance to finger (
 Due to the functionality of the Relative Indexing Design being fairly straightforward, many of the simpler multi-touch interactions can be implemented intuitively. However, as projects get more complicated, the limitations of the Relative Indexing Design become evident.
 
 \subsection{Low Floor}
-For projects that assume a maximum of one touch on the screen at a time, the  Relative Indexing Design has the capability to behave identically to the Closest Finger Design. When there is only one touch on the screen, that touch is every sprite's closest touch. Similarly, the relative index of the single touch will, by definition, always be 1. Thus, both the basic one-player Pong game and the one-finger painting project can be implemented using the Relative Indexing Design in essentially the same way as they were implemented in the Closest Finger Design in the previous chapter (Figure \ref{LowFloorRID}).
+For projects that assume a maximum of one touch on the screen at a time, the  Relative Indexing Design has the capability to behave identically to the Closest Finger Design. When there is only one touch on the screen, that touch is every sprite's closest touch. Similarly, the relative index of the single touch will, by definition, always be 1. Thus, both the one-player Pong game and the one-finger painting project can be implemented using the Relative Indexing Design in essentially the same way as they were implemented in the Closest Finger Design in the previous chapter (Figure \ref{LowFloorRID}).
 
 \begin{figure}
 \centering
@@ -55,7 +55,7 @@ Although  these low floor case projects can be implemented using the Relative In
 
 \subsection{Middle Height}
 
-The middle height case projects are not particularly well suited for the Relative Indexing Design. To begin with, the Relative Indexing Design does not filter the touch inputs for the closest touch (unlike the Closest Finger Design). As a result, implementing the basic one-player Pong game is slightly more laborious, even though it is still a relatively straightforward process (Figure \ref{BasicTwoPlayerPongRID}). Since we have the assumption that there will be at most two simultaneous touches, both paddles only have to listen to the touches with indices 1 or 2. For each paddle, it does not matter whether a touch was the first or the second touch made. Thus, the paddle's script must forever repeat the process of checking both touches and follow the y-coordinate of the touch that is within the paddle's control range (if there is such a touch).
+The middle height case projects are not particularly well suited for the Relative Indexing Design. To begin with, the Relative Indexing Design does not filter the touch inputs for the closest touch (unlike the Closest Finger Design). As a result, implementing the basic two-player Pong game is slightly more laborious, even though it is still a relatively straightforward process (Figure \ref{BasicTwoPlayerPongRID}). Since we have the assumption that there will be at most two simultaneous touches, both paddles only have to listen to the touches with indices 1 or 2. For each paddle, it does not matter whether a touch was the first or the second touch made. Thus, the paddle's script must forever repeat the process of checking both touches and follow the y-coordinate of the touch that is within the paddle's control range (if there is such a touch).
 
 \begin{figure}
 \centering
@@ -66,7 +66,7 @@ The middle height case projects are not particularly well suited for the Relativ
 
 This implementation is fairly easy to follow when presented, but has a few subtleties that can be tricky for Scratchers to figure out. For example, if a Scratcher is not careful, it is possible to fall victim to the bug of having the paddle stuck ``following" an already lifted touch. While these bugs can be tricky for beginners, they are relatively concrete as far as bugs go, so I am confident that Scratchers (especially with the help of the supportive Scratch community) will be able to overcome them and learn from them. 
 
-Similarly, implementing the two-finger painting project using the Relative Indexing Design also has a few subtle pitfalls. However, unlike the case for the basic one-player Pong game, the bugs that arise when implementing the two-finger painting project are very difficult to overcome. Naive intuition would suggest that each paintbrush sprite wait for and subsequently follow a different indexed touch. In other words, one paint brush would follow the first touch when it occurs and the second paint brush would follow the second touch when it occurs (left side of Figure \ref{NaiveTwoFingerPaintingRID}).
+Similarly, implementing the two-finger painting project using the Relative Indexing Design also has a few subtle pitfalls. However, unlike the case for the basic two-player Pong game, the bugs that arise when implementing the two-finger painting project are very difficult to overcome. Naive intuition would suggest that each paintbrush sprite wait for and subsequently follow a different indexed touch. In other words, one paint brush would follow the first touch when it occurs and the second paint brush would follow the second touch when it occurs (left side of Figure \ref{NaiveTwoFingerPaintingRID}).
 
 \begin{figure}
 \centering
